...
                    bottom = 32.dp + innerPadding.calculateBottomPadding(),
                ),
                horizontalAlignment = Alignment.CenterHorizontally,
                verticalArrangement = Arrangement.spacedBy(12.dp),
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("chat_message_list")
                    .hazeSource(state = hazeState),
            ) {
            itemsIndexed(
                items = currentNodes,
                key = { index, item -> item.id },
            ) { index, node ->
...
